--- a/agehn1a1/.project
+++ b/agehn1a1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>agehn1a1</name>
+	<name>agehn2740ex1a</name>
 	<comment></comment>
 	<projects>
 	</projects>
